# pyproject.toml

[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaas"
version = "0.7.1"
description = "A tool to split video soundtracks into separate tracks using OpenUnmix (with optional audio-separator backend support)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gaël de Chalendar", email = "kleagg@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion"
]
requires-python = ">=3.8,<3.15"
dependencies = [
    "PySide6>=6.11.1",
    "ffmpeg>=1.4",
    "numpy>=2.4.6",
    "pydub>=0.25.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.13.0",
    "openunmix>=1.3.0",
    "pytubefix>=10.7.3",
    "moviepy>=2.2.1",
    "PySoundFile>=0.9.0",
    "audioop-lts>=0.2.2",
    "audio_separator[cpu]"
]
keywords = ["audio", "video", "track", "split", "gui", "qt"]



[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchcodec = { index = "pytorch-cpu" }

[project.urls]
Homepage = "https://github.com/kleag/yaas"

[project.scripts]
yaas = "yaas.app:main"


[tool.bumpver]
current_version = "0.7.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"'
]
"src/yaas/__init__.py" = ["{version}"]
"README.md" = ["{version}"]
"inno_setup_script.iss" = ['AppVersion={version}']

